@@ -53,6 +53,6 @@ C<otherprogram(1)>
 
 This manual page was created for Cygwin system (but may be used by
 others) because the original package did not include one.
-Copyright (C) YYYY <Your Name>. Licenced under GPL v2 or later.
+Copyright (C) YYYY Your Name. Licenced under GPL v2 or later.
 
 =cut
